tests/type/errors/bad_procedure_call1.typedsol
2:5 error: Unused function result